<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="450dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/honda_main_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/Topic"
            android:textColor="@color/textYellow"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btnMother"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/boder_style"
                android:text="@string/Mother"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFather"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/boder_style"
                android:text="@string/Father"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnBrother"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/boder_style"
                android:text="@string/Brother"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSister"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/boder_style"
                android:text="@string/Sister"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnCouple"
                android:layout_width="400dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/boder_style"
                android:text="@string/Couple"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>