<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:id="@+id/coordinator">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="450dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/honda_main_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/languageTitle"
            android:textAlignment="center"
            android:textColor="@color/textYellow"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSinhala"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/boder_style"
                android:text="@string/Sinhala"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/boder_style"
                android:text="@string/English"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnTamil"
                android:layout_width="400dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/boder_style"
                android:text="@string/Tamil"
                android:textColor="@color/textYellow"
                android:textSize="35dp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>