<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="450dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/honda_main_logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/Name"
                    android:textColor="@color/textYellow"
                    android:textSize="50dp"
                    android:textStyle="bold" />


                <EditText

                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/boder_style_text"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="50dp"
                    android:textStyle="bold"
                    android:focusableInTouchMode="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Age"
                        android:textColor="@color/textYellow"
                        android:textSize="50dp"
                        android:textStyle="bold" />


                    <EditText

                        android:id="@+id/etAge"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/boder_style_text"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="50dp"
                        android:textStyle="bold"
                        android:focusableInTouchMode="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/District"
                        android:textColor="@color/textYellow"
                        android:textSize="50dp"
                        android:textStyle="bold" />


                    <AutoCompleteTextView
                        android:id="@+id/etDistrict"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/boder_style_text"
                        android:imeOptions="actionNext"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="50dp"
                        android:textStyle="bold"
                        android:focusableInTouchMode="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/TP"
                        android:textColor="@color/textYellow"
                        android:textSize="50dp"
                        android:textStyle="bold" />


                    <EditText

                        android:id="@+id/etTP"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/boder_style_text"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="50dp"
                        android:textStyle="bold"
                        android:focusableInTouchMode="true" />

                    <Button
                        android:id="@+id/btnNext"
                        android:layout_width="400dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/boder_style"
                        android:text="@string/Next"
                        android:textColor="@color/textYellow"
                        android:textSize="50dp"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>